fixed sizing issue with canvas overflowing container

--- a/style.css
+++ b/style.css
@@ -10,16 +10,17 @@ body {
 
 .container {
   position: absolute;
-  border: 5px solid white;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  
+  max-width: 500px;
+  max-height: 500px;
 }
 
-#canvas1 {
+#canvas {
   border: 5px solid white;
-  
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .controls {
